# ViennaVulkanEngine

./:  - Kopie.gitignore  .clang-format  .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BRANCHES.txt  CMakeCache.txt  CMakeLists - Kopie.txt  CMakeLists.txt  Doxyfile.doxygen  Doxyfile.in  INSTALL.vcxproj  INSTALL.vcxproj.filters  Ideas.docx  LICENSE  Makefile  Minimal.cpp  README.md  README_Linux.md  Real-Time Pathtracer Roadmap.md  VVE.sln  ViennaVulkanEngine.sln  VulkanEngine.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.cmd  build_Clang.cmd  build_MSVC.cmd  build_cmake_MSVC_Clang.cmd  build_manual.cmd  clang.sh  cmake_install.cmake  compile_commands.json  create.txt  do_cmake.bat  documentation.html  doxygen.vcxproj  doxygen.vcxproj.filters  imgui.ini  (+4 more)
VulkanEngine/: BottomLevelASGenerator.cpp  BottomLevelASGenerator.h  CLInclude.h  CLIntersect.cpp  CLShape.h  CMakeLists.txt  DescriptorSetGenerator.cpp  DescriptorSetGenerator.h  Doxyfile  Doxyfile.doxygen  H264ParameterSet.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  PHIntersect.cpp  PHShape.h  RaytracingPipelineGenerator.cpp  RaytracingPipelineGenerator.h  ShaderBindingTableGenerator.cpp  ShaderBindingTableGenerator.h  TopLevelASGenerator.cpp  TopLevelASGenerator.h  VEDocumentation.cpp  VEEngine.cpp  VEEngine.h  VEEntity.cpp  VEEntity.h  VEEnums.h  VEEventListener.cpp  VEEventListener.h  VEEventListenerCustom.cpp  VEEventListenerCustom.h  VEEventListenerGLFW.cpp  VEEventListenerGLFW.h  VEEventListenerNuklear.cpp  VEEventListenerNuklear.h  VEEventListenerNuklearDebug.cpp  VEEventListenerNuklearDebug.h  VEEventListenerNuklearError.cpp  VEEventListenerNuklearError.h  VEInclude.h  (+115 more)
VulkanEngine/cmake/modules/: FindASSIMP.cmake  FindGLFW3.cmake  FindIrrKlang.cmake
VulkanEngine/deprecated/: VESubrenderFW_Cubemap.cpp  VESubrenderFW_Cubemap.h  VESubrenderFW_Cubemap2.cpp  VESubrenderFW_Cubemap2.h  VESubrenderRT_DN_Multi_Lights.cpp  VESubrenderRT_DN_Single.cpp  VulkanFunctions.cpp
VulkanEngine/deprecated/Cubemap/: frag.spv  shader.frag  shader.vert  vert.spv
VulkanEngine/deprecated/Cubemap2/: shader.vert  vert.spv
VulkanEngine/media/models/free/: vp.mtl
VulkanEngine/media/shader/: common_defines.glsl  compile_all.sh
VulkanEngine/media/shader/Forward/: common_defines.glsl  light.glsl
VulkanEngine/media/shader/RT/: closesthit.rchit  closesthit_multi_lights.rchit  closesthit_single.rchit  common_defines.glsl  compile_shaders.bat  miss.rmiss  raygen.rgen
VulkanEngine/media/shader/RayTracing_KHR/: closesthit.rchit  closesthit_multi_lights.rchit  closesthit_single.rchit  compile_shaders.sh  miss.rmiss  raygen.rgen  rchit.spv  rgen.spv  shadow_miss.rmiss  shadow_rmiss.spv
VulkanEngine/media/shader/RayTracing_NV/: closesthit.rchit  closesthit_multi_lights.rchit  closesthit_single.rchit  compile_shaders.sh  miss.rmiss  raygen.rgen  rchit.spv  rmiss.spv  shadow_miss.rmiss  shadow_rmiss.spv
VulkanEngine/media/shader/Video/: comp.spv  compile_shaders.bat  compile_shaders.sh  shader.comp
VulkanEngine/media/shader/nuklearshaders/: nuklear.frag  nuklear.frag.spv  nuklear.vert.h
VulkanEngine/media/sounds/: license.txt
VulkanEngine/models/Textures/: desert_eagle.dds
VulkanEngine/models/cottage/: cottage_description.txt
VulkanEngine/models/hand/: hand.fbx
VulkanEngine/models/old_house/: Old House 2 3D Models.mtl
VulkanEngine/models/sponza_part/: sponza.mtl
VulkanEngine/models/test/: plane.mtl
VulkanEngine/models/test/sphere/: sphere.mtl
VulkanEngine/shader/: common_defines.glsl
VulkanEngine/shader/C1/: shader.frag  vert.spv
VulkanEngine/shader/Cubemap/: shader.vert  vert.spv
VulkanEngine/shader/D/: frag.spv  shader.frag  shader.vert  vert.spv
VulkanEngine/shader/DN/: frag.spv  shader.frag  vert.spv
VulkanEngine/shader/Deferred/: common_defines.glsl  light.glsl
VulkanEngine/shader/Forward/: common_defines.glsl  light.glsl
VulkanEngine/shader/Shadow/: shader.vert
VulkanEngine/shader/nuklearshaders/: nuklear.frag.h  nuklear.vert  nuklear.vert.spv
examples/SimpleGame/: CMakeLists.txt  cmake_install.cmake  simplegame.cpp  simplegame.vcxproj  simplegame.vcxproj.filters
examples/basic_test/: CMakeLists.txt  Makefile  basic_test.cpp  basic_test.ilk  basic_test.vcxproj  basic_test.vcxproj.filters  clean.bat  cmake_install.cmake  do.bat  imgui.ini  test.cpp
examples/game/: CMakeLists.txt  game.cpp
examples/gaussian-splatting-cubemap-lighting-demo/: CMakeLists.txt  README.md  gaussian-splatting-cubemap-lighting-demo.cpp
examples/gaussian-splatting-demo/: CMakeLists.txt  gaussian-splatting-demo.cpp
examples/helper/: CMakeLists.txt  helper.cpp
examples/hybrid-lighting-demo/: CMakeLists.txt  README.md  hybrid-lighting-demo.cpp
src/: CMakeLists.txt  Makefile  VEAssetManager.cpp  VEComponent.cpp  VEContainer.cpp  VEECS.cpp  VEEngine.cpp  VEGUI.cpp  VEGaussianAssetLoader.cpp  VEImgui.cpp  VEImgui_old.cpp  VERenderer.cpp  VERendererDeferred.cpp  VERendererDeferred11.cpp  VERendererDeferred13.cpp  VERendererDeferredCommon.cpp  VERendererForward.cpp  VERendererForward11.cpp  VERendererGaussian.cpp  VERendererGaussianCubemap.cpp  VERendererGaussian_Cubemap.cpp  VERendererImgui.cpp  VERendererShadow11.cpp  VERendererVulkan.cpp  VESceneManager.cpp  VESound.cpp  VESoundManager.cpp  VESoundManagerSDL2.cpp  VESoundManagerSDL3.cpp  VESystem.cpp  VETable.cpp  VEVulkan.cpp  VEWindow.cpp  VEWindowSDL.cpp  VHBuffer.cpp  VHCommand.cpp  VHDevice.cpp  VHDevice2.cpp  VHImage.cpp  VHImgui.cpp  (+9 more)
src/Debug/: vve.lib
src/PathTracing/: buffer.cpp  command_manager_impl.cpp  descriptor_sets.cpp  descriptor_sets_RT.cpp  descriptor_sets_targets.cpp  helper_structs.cpp  image.cpp  light_manager.cpp  material_manager.cpp  object_manager.cpp  pipline_rasterized.cpp  pipline_raytraced.cpp  render_target.cpp  swapchain.cpp  texture_manager.cpp  vrt_renderer.cpp
src/old/: VHCommand.cpp  VHImage.cpp  VHRender.cpp  VHSync.cpp  VHVulkan.cpp
src/vve.dir/Debug/: vve.lib.recipe  vve.vcxproj.FileListAbsolute.txt
src/vve.dir/Release/: vve.lib.recipe
tests/: CMakeLists.txt  testlib.cpp  testvve.cpp
(+1487 files in other folders)
